Fixed spacing issue

--- a/app/assets/stylesheets/algorithms.scss
+++ b/app/assets/stylesheets/algorithms.scss
@@ -17,6 +17,9 @@
 	.push-right {
 		margin-left: 175px;
 	}
+	.add-space {
+		padding-bottom: 30px;
+	}
 	/********************************* Show Algo Page *******************/
 	div.algo-details {
 		font-size: 1.5em;
