--- a/app/assets/stylesheets/reports.scss
+++ b/app/assets/stylesheets/reports.scss
@@ -9,7 +9,7 @@
 	}
 	td {
 	font-size: 1.3em;
-	padding: 5px 7px 10px 7px;
+	padding: 5px 7px 5px 7px;
 	}
 	div.written-by {
 		text-align: right;
@@ -18,5 +18,8 @@
 	}
 	.push-right {
 		margin-left: 145px;
+	}
+	.add-space {
+	padding-bottom: 30px;
 	}
 }
